Fix: changed css style for Right alignment

--- a/component-library/components/sections/contact-block/contact-block.scss
+++ b/component-library/components/sections/contact-block/contact-block.scss
@@ -83,7 +83,7 @@
           grid-column: 9 / -2;
         }
   
-        #{$c}__map_wrapper {
+        #{$c}__map-wrapper {
           grid-column: 1 / 8;
           grid-row: 1;
         }
